Cleaned up, refactored and fixed some dependencies.